@@ -1,10 +1,5 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
-# Sample debian/rules that uses debhelper.
-# This file was originally written by Joey Hess and Craig Small.
-# As a special exception, when this file is copied by dh-make into a
-# dh-make output file, you may use that output file without restriction.
-# This special exception was added by Craig Small in version 0.37 of dh-make.
 
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
@@ -49,8 +44,7 @@ install: build
 	dh_installdirs
 
 	# Add here commands to install the package into debian/itaka.
-	$(MAKE) -f Makefile.Debian DESTDIR=$(CURDIR)/debian/itaka install
-	#$(MAKE) install
+	$(MAKE) DESTDIR=$(CURDIR)/debian/itaka/usr install
 
 	# And other miscellaneous tasks
 	/usr/bin/convert share/images/itaka32x32.png debian/itaka/usr/share/pixmaps/itaka.xpm
